# lm_dw_spotify

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: push_2_docker_hub.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
docker/: Dockerfile
